--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ li:hover {
     justify-content: space-between;
     align-items: stretch;
     flex-wrap: wrap;
+    flex-direction: row;
     width: 99%;
 }
 
