--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ li:hover {
     padding: 5px 5px 5px 5px;
     border: #000 1px solid;
     box-shadow: 5px 5px 0px;
-    width: 12%;
+    width: 200px;
     text-align: center;
     background-color: #f2f1ed;
     font-family: "IBM Plex Mono" , monospace;
@@ -96,7 +96,7 @@ li:hover {
     border-radius: 50%;
 }
 
-#container {
+.container {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
@@ -104,6 +104,8 @@ li:hover {
     flex-direction: row;
     width: 99%;
 }
+
+
 
 main{
     margin-top: 100px;
@@ -221,7 +223,8 @@ ul{
 
 button {
     
-    top: auto;
+    
+    vertical-align: bottom;
     font-family: "IBM Plex Mono" , monospace;
     font-size: small;
     border: #000  solid thin;
@@ -229,6 +232,7 @@ button {
     padding: 5px 5px 5px 5px;
     box-shadow: 5px 5px 0px;
     color: #000;
+    
 }
 
 button:hover {
@@ -242,3 +246,44 @@ button:hover {
     color: #c4c4;
     
 }
+
+/* The Modal (background) */
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    box-shadow: 5px 5px;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
